SDM-2647: Fixes to IntegrationFlowConfig: Replace ProcessingErrors message header with ProcessingServiceContext and add BiFunction methods to ServiceActivators.