@@ -1,33 +1,33 @@
 package fi.fmi.avi.archiver.file;
 
-import static java.util.Objects.requireNonNull;
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatIllegalArgumentException;
-import static org.junit.jupiter.api.Assertions.fail;
-
-import java.io.IOException;
-import java.net.URISyntaxException;
-import java.net.URL;
-import java.nio.charset.StandardCharsets;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.time.Instant;
-import java.time.ZoneId;
-import java.util.regex.Pattern;
-
+import fi.fmi.avi.archiver.DefaultProcessingServiceContext;
+import fi.fmi.avi.archiver.ProcessingServiceContext;
+import fi.fmi.avi.archiver.config.AviMessageConverterConfig;
+import fi.fmi.avi.archiver.config.model.FileConfig;
+import fi.fmi.avi.archiver.logging.model.NoOpLoggingContext;
+import fi.fmi.avi.converter.AviMessageConverter;
+import fi.fmi.avi.model.GenericAviationWeatherMessage;
+import fi.fmi.avi.model.MessageType;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.test.context.junit.jupiter.SpringJUnitConfig;
 
-import fi.fmi.avi.archiver.config.AviMessageConverterConfig;
-import fi.fmi.avi.archiver.config.model.FileConfig;
-import fi.fmi.avi.archiver.logging.model.LoggingContext;
-import fi.fmi.avi.archiver.logging.model.NoOpLoggingContext;
-import fi.fmi.avi.converter.AviMessageConverter;
-import fi.fmi.avi.model.GenericAviationWeatherMessage;
-import fi.fmi.avi.model.MessageType;
+import java.io.IOException;
+import java.net.URISyntaxException;
+import java.net.URL;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.time.Instant;
+import java.time.ZoneId;
+import java.util.List;
+import java.util.regex.Pattern;
+
+import static java.util.Objects.requireNonNull;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatIllegalArgumentException;
+import static org.junit.jupiter.api.Assertions.fail;
 
 @SpringJUnitConfig(AviMessageConverterConfig.class)
 public class FileParserTest {
@@ -57,14 +57,14 @@ public class FileParserTest {
     private AviMessageConverter aviMessageConverter;
 
     private FileParser fileParser;
-    private LoggingContext loggingContext;
+    private ProcessingServiceContext processingServiceContext;
 
     private static String getFileContent(final String filename) {
         try {
             final URL resource = requireNonNull(FileParserTest.class.getResource(filename));
             final Path path = Paths.get(resource.toURI());
             assertThat(path).exists();
-            return new String(Files.readAllBytes(path), StandardCharsets.UTF_8);
+            return Files.readString(path);
         } catch (final RuntimeException | URISyntaxException | IOException e) {
             fail(e);
             return null;
@@ -74,31 +74,31 @@ public class FileParserTest {
     @BeforeEach
     public void setUp() {
         fileParser = new FileParser(aviMessageConverter);
-        loggingContext = NoOpLoggingContext.getInstance();
+        processingServiceContext = new DefaultProcessingServiceContext(NoOpLoggingContext.getInstance());
     }
 
     @Test
     void empty_content() {
         assertThatIllegalArgumentException().isThrownBy(
-                () -> fileParser.parse("", DEFAULT_METADATA.toBuilder().setFileConfig(TAC_FILECONFIG).build(), loggingContext));
+                () -> fileParser.parse("", DEFAULT_METADATA.toBuilder().setFileConfig(TAC_FILECONFIG).build(), processingServiceContext));
     }
 
     @Test
     void whitespace_content() {
         assertThatIllegalArgumentException().isThrownBy(
-                () -> fileParser.parse("\r\r\n ", DEFAULT_METADATA.toBuilder().setFileConfig(TAC_FILECONFIG).build(), loggingContext));
+                () -> fileParser.parse("\r\r\n ", DEFAULT_METADATA.toBuilder().setFileConfig(TAC_FILECONFIG).build(), processingServiceContext));
     }
 
     @Test
     void inconvertible_content() {
         final String filename = "inconvertible.txt";
         final FileMetadata metadata = DEFAULT_METADATA.toBuilder().mutateFileReference(ref -> ref.setFilename(filename)).setFileConfig(TAC_FILECONFIG).build();
-        final FileParser.FileParseResult result = fileParser.parse(getFileContent(filename), metadata, loggingContext);
+        final List<InputAviationMessage> result = fileParser.parse(getFileContent(filename), metadata, processingServiceContext);
 
-        assertThat(result.getParseErrors()).isFalse();
-        assertThat(result.getInputAviationMessages()).hasSize(1);
+        assertThat(processingServiceContext.isProcessingErrors()).isFalse();
+        assertThat(result).hasSize(1);
 
-        final InputAviationMessage message = result.getInputAviationMessages().get(0);
+        final InputAviationMessage message = result.getFirst();
         assertThat(message.getGtsBulletinHeading().getBulletinHeading()).isEmpty();
         assertThat(message.getGtsBulletinHeading().getBulletinHeadingString()).isEmpty();
         assertThat(message.getMessage().getOriginalMessage()).isEqualTo("Inconvertible message");
@@ -110,12 +110,12 @@ public class FileParserTest {
     void taf_tac() {
         final String filename = "simple_taf.txt2";
         final FileMetadata metadata = DEFAULT_METADATA.toBuilder().mutateFileReference(ref -> ref.setFilename(filename)).setFileConfig(TAC_FILECONFIG).build();
-        final FileParser.FileParseResult result = fileParser.parse(getFileContent(filename), metadata, loggingContext);
+        final List<InputAviationMessage> result = fileParser.parse(getFileContent(filename), metadata, processingServiceContext);
 
-        assertThat(result.getParseErrors()).isFalse();
-        assertThat(result.getInputAviationMessages()).hasSize(1);
+        assertThat(processingServiceContext.isProcessingErrors()).isFalse();
+        assertThat(result).hasSize(1);
 
-        final InputAviationMessage message = result.getInputAviationMessages().get(0);
+        final InputAviationMessage message = result.getFirst();
         assertThat(message.getGtsBulletinHeading().getBulletinHeading()).isPresent();
         assertThat(message.getGtsBulletinHeading().getBulletinHeadingString()).contains("FTXX33 XXXX 181500");
         assertThat(message.getMessage().getOriginalMessage()).isEqualTo("TAF EFXX 181500Z 1812/1912 00000KT CAVOK=");
@@ -127,12 +127,12 @@ public class FileParserTest {
     void taf_tac_without_gts_heading() {
         final String filename = "taf-missing-gts-heading.txt";
         final FileMetadata metadata = DEFAULT_METADATA.toBuilder().mutateFileReference(ref -> ref.setFilename(filename)).setFileConfig(TAC_FILECONFIG).build();
-        final FileParser.FileParseResult result = fileParser.parse(getFileContent(filename), metadata, loggingContext);
+        final List<InputAviationMessage> result = fileParser.parse(getFileContent(filename), metadata, processingServiceContext);
 
-        assertThat(result.getParseErrors()).isFalse();
-        assertThat(result.getInputAviationMessages()).hasSize(1);
+        assertThat(processingServiceContext.isProcessingErrors()).isFalse();
+        assertThat(result).hasSize(1);
 
-        final InputAviationMessage message = result.getInputAviationMessages().get(0);
+        final InputAviationMessage message = result.getFirst();
         assertThat(message.getGtsBulletinHeading().getBulletinHeading()).isEmpty();
         assertThat(message.getGtsBulletinHeading().getBulletinHeadingString()).isEmpty();
         assertThat(message.getMessage().getOriginalMessage()).isEqualTo("TAF EFXX 181500Z 1812/1912 00000KT CAVOK=");
@@ -144,64 +144,64 @@ public class FileParserTest {
     void taf_tac_bulletin() {
         final String filename = "taf-tac-bulletin.bul";
         final FileMetadata metadata = DEFAULT_METADATA.toBuilder().mutateFileReference(ref -> ref.setFilename(filename)).setFileConfig(TAC_FILECONFIG).build();
-        final FileParser.FileParseResult result = fileParser.parse(getFileContent(filename), metadata, loggingContext);
+        final List<InputAviationMessage> result = fileParser.parse(getFileContent(filename), metadata, processingServiceContext);
 
-        assertThat(result.getParseErrors()).isFalse();
-        assertThat(result.getInputAviationMessages()).hasSize(2);
+        assertThat(processingServiceContext.isProcessingErrors()).isFalse();
+        assertThat(result).hasSize(2);
 
-        assertThat(result.getInputAviationMessages()).allSatisfy(message -> {
+        assertThat(result).allSatisfy(message -> {
             assertThat(message.getGtsBulletinHeading().getBulletinHeading()).isPresent();
             assertThat(message.getGtsBulletinHeading().getBulletinHeadingString()).contains("FTYU31 YUDO 160000");
             assertThat(message.getCollectIdentifier().getBulletinHeading()).isEmpty();
             assertThat(message.getCollectIdentifier().getBulletinHeadingString()).isEmpty();
         });
 
-        assertThat(result.getInputAviationMessages().get(0).getMessage().getOriginalMessage()).isEqualTo("TAF YUDO 160000Z NIL=");
-        assertThat(result.getInputAviationMessages().get(1).getMessage().getOriginalMessage()).isEqualTo("TAF YUDD 160000Z NIL=");
+        assertThat(result.get(0).getMessage().getOriginalMessage()).isEqualTo("TAF YUDO 160000Z NIL=");
+        assertThat(result.get(1).getMessage().getOriginalMessage()).isEqualTo("TAF YUDD 160000Z NIL=");
     }
 
     @Test
     void taf_tac_bulletin_partially_valid() {
         final String filename = "taf-tac-bulletin-partially-valid.bul";
         final FileMetadata metadata = DEFAULT_METADATA.toBuilder().mutateFileReference(ref -> ref.setFilename(filename)).setFileConfig(TAC_FILECONFIG).build();
-        final FileParser.FileParseResult result = fileParser.parse(getFileContent(filename), metadata, loggingContext);
+        final List<InputAviationMessage> result = fileParser.parse(getFileContent(filename), metadata, processingServiceContext);
 
-        assertThat(result.getParseErrors()).isTrue();
-        assertThat(result.getInputAviationMessages()).hasSize(2);
+        assertThat(processingServiceContext.isProcessingErrors()).isTrue();
+        assertThat(result).hasSize(2);
 
-        assertThat(result.getInputAviationMessages()).allSatisfy(message -> {
+        assertThat(result).allSatisfy(message -> {
             assertThat(message.getGtsBulletinHeading().getBulletinHeading()).isPresent();
             assertThat(message.getGtsBulletinHeading().getBulletinHeadingString()).contains("FTYU31 YUDO 160000");
             assertThat(message.getCollectIdentifier().getBulletinHeading()).isEmpty();
             assertThat(message.getCollectIdentifier().getBulletinHeadingString()).isEmpty();
         });
 
-        assertThat(result.getInputAviationMessages().get(0).getMessage().getOriginalMessage()).isEqualTo("TAF YUDO 160000Z NIL=");
-        assertThat(result.getInputAviationMessages().get(1).getMessage().getOriginalMessage()).isEqualTo("TAF YUDD 160000Z NIL=");
+        assertThat(result.get(0).getMessage().getOriginalMessage()).isEqualTo("TAF YUDO 160000Z NIL=");
+        assertThat(result.get(1).getMessage().getOriginalMessage()).isEqualTo("TAF YUDD 160000Z NIL=");
     }
 
     @Test
     void taf_tac_two_bulletins() {
         final String filename = "taf-tac-two-bulletins.bul";
         final FileMetadata metadata = DEFAULT_METADATA.toBuilder().mutateFileReference(ref -> ref.setFilename(filename)).setFileConfig(TAC_FILECONFIG).build();
-        final FileParser.FileParseResult result = fileParser.parse(getFileContent(filename), metadata, loggingContext);
+        final List<InputAviationMessage> result = fileParser.parse(getFileContent(filename), metadata, processingServiceContext);
 
-        assertThat(result.getParseErrors()).isFalse();
-        assertThat(result.getInputAviationMessages()).hasSize(4);
+        assertThat(processingServiceContext.isProcessingErrors()).isFalse();
+        assertThat(result).hasSize(4);
 
-        assertThat(result.getInputAviationMessages()).allSatisfy(message -> {
+        assertThat(result).allSatisfy(message -> {
             assertThat(message.getGtsBulletinHeading().getBulletinHeading()).isPresent();
             assertThat(message.getCollectIdentifier().getBulletinHeading()).isEmpty();
             assertThat(message.getCollectIdentifier().getBulletinHeadingString()).isEmpty();
         });
 
-        assertThat(result.getInputAviationMessages().subList(0, 2)).allSatisfy(
+        assertThat(result.subList(0, 2)).allSatisfy(
                 message -> assertThat(message.getGtsBulletinHeading().getBulletinHeadingString()).contains("FTYU31 YUDO 160000"));
-        assertThat(result.getInputAviationMessages().subList(2, 4)).allSatisfy(
+        assertThat(result.subList(2, 4)).allSatisfy(
                 message -> assertThat(message.getGtsBulletinHeading().getBulletinHeadingString()).contains("FTYU31 YUDO 180000"));
 
-        assertThat(result.getInputAviationMessages().get(0).getMessage().getOriginalMessage()).isEqualTo("TAF YUDO 160000Z NIL=");
-        assertThat(result.getInputAviationMessages().get(1).getMessage().getOriginalMessage()).isEqualTo("TAF YUDD 160000Z NIL=");
+        assertThat(result.get(0).getMessage().getOriginalMessage()).isEqualTo("TAF YUDO 160000Z NIL=");
+        assertThat(result.get(1).getMessage().getOriginalMessage()).isEqualTo("TAF YUDD 160000Z NIL=");
     }
 
     @Test
@@ -211,12 +211,12 @@ public class FileParserTest {
                 .mutateFileReference(ref -> ref.setFilename(filename))
                 .setFileConfig(IWXXM_FILECONFIG)
                 .build();
-        final FileParser.FileParseResult result = fileParser.parse(getFileContent(filename), metadata, loggingContext);
+        final List<InputAviationMessage> result = fileParser.parse(getFileContent(filename), metadata, processingServiceContext);
 
-        assertThat(result.getParseErrors()).isFalse();
-        assertThat(result.getInputAviationMessages()).hasSize(1);
+        assertThat(processingServiceContext.isProcessingErrors()).isFalse();
+        assertThat(result).hasSize(1);
 
-        final InputAviationMessage message = result.getInputAviationMessages().get(0);
+        final InputAviationMessage message = result.getFirst();
         assertThat(message.getGtsBulletinHeading().getBulletinHeading()).isEmpty();
         assertThat(message.getGtsBulletinHeading().getBulletinHeadingString()).isEmpty();
         assertThat(message.getCollectIdentifier().getBulletinHeading()).isEmpty();
@@ -232,12 +232,12 @@ public class FileParserTest {
                 .mutateFileReference(ref -> ref.setFilename(filename))
                 .setFileConfig(IWXXM_FILECONFIG)
                 .build();
-        final FileParser.FileParseResult result = fileParser.parse(getFileContent(filename), metadata, loggingContext);
+        final List<InputAviationMessage> result = fileParser.parse(getFileContent(filename), metadata, processingServiceContext);
 
-        assertThat(result.getParseErrors()).isFalse();
-        assertThat(result.getInputAviationMessages()).hasSize(1);
+        assertThat(processingServiceContext.isProcessingErrors()).isFalse();
+        assertThat(result).hasSize(1);
 
-        final InputAviationMessage message = result.getInputAviationMessages().get(0);
+        final InputAviationMessage message = result.getFirst();
         assertThat(message.getGtsBulletinHeading().getBulletinHeading()).isEmpty();
         assertThat(message.getGtsBulletinHeading().getBulletinHeadingString()).isEmpty();
         assertThat(message.getCollectIdentifier().getBulletinHeading()).isEmpty();
@@ -253,9 +253,9 @@ public class FileParserTest {
                 .mutateFileReference(ref -> ref.setFilename(filename))
                 .setFileConfig(IWXXM_FILECONFIG)
                 .build();
-        final FileParser.FileParseResult result = fileParser.parse(getFileContent(filename), metadata, loggingContext);
-        assertThat(result.getInputAviationMessages()).isEmpty();
-        assertThat(result.getParseErrors()).isTrue();
+        final List<InputAviationMessage> result = fileParser.parse(getFileContent(filename), metadata, processingServiceContext);
+        assertThat(result).isEmpty();
+        assertThat(processingServiceContext.isProcessingErrors()).isTrue();
     }
 
     @Test
@@ -265,12 +265,12 @@ public class FileParserTest {
                 .mutateFileReference(ref -> ref.setFilename(filename))
                 .setFileConfig(IWXXM_FILECONFIG)
                 .build();
-        final FileParser.FileParseResult result = fileParser.parse(getFileContent(filename), metadata, loggingContext);
+        final List<InputAviationMessage> result = fileParser.parse(getFileContent(filename), metadata, processingServiceContext);
 
-        assertThat(result.getParseErrors()).isFalse();
-        assertThat(result.getInputAviationMessages()).hasSize(1);
+        assertThat(processingServiceContext.isProcessingErrors()).isFalse();
+        assertThat(result).hasSize(1);
 
-        final InputAviationMessage message = result.getInputAviationMessages().get(0);
+        final InputAviationMessage message = result.getFirst();
         assertThat(message.getGtsBulletinHeading().getBulletinHeading()).isPresent();
         assertThat(message.getGtsBulletinHeading().getBulletinHeadingString()).contains("LTFI31 EFKL 301115");
         assertThat(message.getCollectIdentifier().getBulletinHeading()).isEmpty();
@@ -286,12 +286,12 @@ public class FileParserTest {
                 .mutateFileReference(ref -> ref.setFilename(filename))
                 .setFileConfig(IWXXM_FILECONFIG)
                 .build();
-        final FileParser.FileParseResult result = fileParser.parse(getFileContent(filename), metadata, loggingContext);
+        final List<InputAviationMessage> result = fileParser.parse(getFileContent(filename), metadata, processingServiceContext);
 
-        assertThat(result.getParseErrors()).isFalse();
-        assertThat(result.getInputAviationMessages()).hasSize(2);
+        assertThat(processingServiceContext.isProcessingErrors()).isFalse();
+        assertThat(result).hasSize(2);
 
-        assertThat(result.getInputAviationMessages()).allSatisfy(message -> {
+        assertThat(result).allSatisfy(message -> {
             assertThat(message.getGtsBulletinHeading().getBulletinHeading()).isEmpty();
             assertThat(message.getGtsBulletinHeading().getBulletinHeadingString()).isEmpty();
             assertThat(message.getCollectIdentifier().getBulletinHeadingString()).contains("A_LTFI31EFKL301115_C_EFKL_201902011315--.xml");
@@ -308,12 +308,12 @@ public class FileParserTest {
                 .mutateFileReference(ref -> ref.setFilename(filename))
                 .setFileConfig(IWXXM_FILECONFIG)
                 .build();
-        final FileParser.FileParseResult result = fileParser.parse(getFileContent(filename), metadata, loggingContext);
+        final List<InputAviationMessage> result = fileParser.parse(getFileContent(filename), metadata, processingServiceContext);
 
-        assertThat(result.getParseErrors()).isFalse();
-        assertThat(result.getInputAviationMessages()).hasSize(2);
+        assertThat(processingServiceContext.isProcessingErrors()).isFalse();
+        assertThat(result).hasSize(2);
 
-        assertThat(result.getInputAviationMessages()).allSatisfy(message -> {
+        assertThat(result).allSatisfy(message -> {
             assertThat(message.getGtsBulletinHeading().getBulletinHeading()).isPresent();
             assertThat(message.getGtsBulletinHeading().getBulletinHeadingString()).contains("LTFI31 EFKL 301115");
             assertThat(message.getCollectIdentifier().getBulletinHeadingString()).contains("A_LTFI31EFKL301115_C_EFKL_201902011315--.xml");
@@ -330,12 +330,12 @@ public class FileParserTest {
                 .mutateFileReference(ref -> ref.setFilename(filename))
                 .setFileConfig(IWXXM_FILECONFIG)
                 .build();
-        final FileParser.FileParseResult result = fileParser.parse(getFileContent(filename), metadata, loggingContext);
+        final List<InputAviationMessage> result = fileParser.parse(getFileContent(filename), metadata, processingServiceContext);
 
-        assertThat(result.getParseErrors()).isFalse();
-        assertThat(result.getInputAviationMessages()).hasSize(1);
+        assertThat(processingServiceContext.isProcessingErrors()).isFalse();
+        assertThat(result).hasSize(1);
 
-        assertThat(result.getInputAviationMessages()).allSatisfy(message -> {
+        assertThat(result).allSatisfy(message -> {
             assertThat(message.getGtsBulletinHeading().getBulletinHeading()).isPresent();
             assertThat(message.getGtsBulletinHeading().getBulletinHeadingString()).contains("LTFI31 EFKL 301115");
             assertThat(message.getCollectIdentifier().getBulletinHeadingString()).isEmpty();
@@ -352,8 +352,8 @@ public class FileParserTest {
                 .mutateFileReference(ref -> ref.setFilename(filename))
                 .setFileConfig(IWXXM_FILECONFIG)
                 .build();
-        final FileParser.FileParseResult result = fileParser.parse(getFileContent(filename), metadata, loggingContext);
-        assertThat(result.getInputAviationMessages()).isEmpty();
-        assertThat(result.getParseErrors()).isTrue();
+        final List<InputAviationMessage> result = fileParser.parse(getFileContent(filename), metadata, processingServiceContext);
+        assertThat(result).isEmpty();
+        assertThat(processingServiceContext.isProcessingErrors()).isTrue();
     }
 }
